--- a/src/main/resources/ru/app/public/css/whisper.css
+++ b/src/main/resources/ru/app/public/css/whisper.css
@@ -1,47 +1,44 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body, input, textarea, select, button {
-    font-size: 12px;
-    font-family: sans-serif;
+
+@font-face { font-family: "Finger Paint"; src: url("../fonts/FingerPaint-Regular.ttf"); }
+@font-face { font-family: "Text Font"; src: url("../fonts/text_font3.ttf"); }
+@font-face { font-family: "WOX"; src: url("../fonts/WOX-Striped_Triple_Demo.otf"); }
+
+
+html{
+    scrollbar-width: none;
 }
 
-div.head{
-    margin: 0;
-    align-content: center;
-    align-items: center;
-    background-color: #dddf00;
-    display: flex;
-    flex: none;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    height: min-content;
-    justify-content: flex-start;
-    min-height: 800px;
-    overflow: hidden;
-    padding: 100px;
-    position: relative;
-    width: 100%;
-}
-p.head{
-    font-family: "Monoton", sans-serif;
+h1 {
+    font-family: "Finger Paint", sans-serif;
     font-size: 200px;
-    padding: 0;
-    margin: 0;
-
+    font-weight: 400;
+    font-style: normal;
+    color: #a2a296;
     text-align: center;
     text-transform: uppercase;
 }
-div.des p{
-    margin-left: 170px;
-    margin-right: 60px;
-    font-size: 16px;
-    text-align: center;
+
+body{
+    background-color: black;
 }
-div.des{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+
+header{
+    background-color: #a2a296;
 }
+
+
+bg-yellow{
+    background-color: #a2a296;
+}
+
+bg-black{
+    color: black;
+}
+
+p {
+    font-size: 14px;
+    font-family: "Text Font", sans-serif;
+    font-weight: bold;
+
+}
+
