--- a/src/main/resources/ru/app/public/css/whisper.css
+++ b/src/main/resources/ru/app/public/css/whisper.css
@@ -13,7 +13,7 @@ h1 {
     font-size: 200px;
     font-weight: 400;
     font-style: normal;
-    color: #a2a296;
+    color: black;
     text-align: center;
     text-transform: uppercase;
 }
@@ -23,12 +23,12 @@ body{
 }
 
 header{
-    background-color: #a2a296;
+    background-color: #dddf00;
 }
 
 
 bg-yellow{
-    background-color: #a2a296;
+    background-color:#dddf00;
 }
 
 bg-black{
