--- a/src/main/resources/ru/app/public/css/whisper.css
+++ b/src/main/resources/ru/app/public/css/whisper.css
@@ -8,6 +8,11 @@ html{
     scrollbar-width: none;
 }
 
+p-6{
+    padding: 25%;
+    margin: 25%;
+}
+
 h1 {
     font-family: "Finger Paint", sans-serif;
     font-size: 200px;
@@ -18,6 +23,15 @@ h1 {
     text-transform: uppercase;
 }
 
+h2 {
+    font-family: "Text Font", sans-serif;
+    font-size: 44px;
+    font-weight: 400;
+    font-style: normal;
+    color: #dddf00;
+    width: 40%;
+}
+
 body{
     background-color: black;
 }
@@ -26,13 +40,11 @@ header{
     background-color: #dddf00;
 }
 
-
-bg-yellow{
-    background-color:#dddf00;
-}
-
-bg-black{
-    color: black;
+main p{
+    font-size: 14px;
+    font-family: "Text Font", sans-serif;
+    font-weight: bold;
+    color: #dddf00;
 }
 
 p {
