--- a/src/main/resources/ru/app/public/css/MainPage.css
+++ b/src/main/resources/ru/app/public/css/MainPage.css
@@ -1,29 +1,51 @@
 
-
-
 body{
-    background-color: #222629;
+    margin: 0;
+    padding: 0;
+    background-color: var(--dark-grey);
+    height: 100vh;
+    position: relative;
+}
+
+body::after, body::before{
+
+    background-repeat: no-repeat;
+
+    content: '';
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 0.25;
+    z-index: -1;
+    height: 50vh;
+
+    background-size: contain;
+    pointer-events: none;
+
 }
 
 body::after {
-    content: "";
-    background-image: url('../images/bg_main.png');
-    opacity: 0.3;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    z-index: -1;
+    background-image: url('../images/svg/38142.svg');
+    background-position: bottom left;
+    height: 30vh;
+    opacity: 0.2;
+    left: 5%;
+}
+
+body::before {
+    background-image: url('../images/svg/38015.svg');
+    background-position: bottom right;
+    right: 1%;
 }
 
 
 .left_slide{
     position: relative;
     height: 100vh;
-    width: 1px;
+    width: 2px;
 
-    background: linear-gradient(to bottom, #86C232 25%, #86C232 50%, #474B4F 50%);
+    background: linear-gradient(to bottom, var(--light-green) 50%, var(--light-grey) 50%);
 }
 
 .left_slide::before, .left_slide::after {
@@ -33,10 +55,38 @@ body::after {
     transform: translateX(-50%);
     width: 8px; /* диаметр точки */
     height: 8px; /* диаметр точки */
-    background-color: #61892F; /* цвет точки */
+    background-color: var(--dark-green); /* цвет точки */
     border-radius: 50%; /* чтобы точка была круглой */
     z-index: 1;
 }
+
+.changed-gradient {
+    animation: changeGradientAnimation 1s forwards;
+}
+
+.changed-gradient-back {
+    animation: changeGradientAnimation 1s backwards;
+
+}
+
+@keyframes changeGradientAnimation {
+    0% {
+        background: linear-gradient(to bottom, var(--light-green) 50%, var(--light-grey) 50%);
+    }
+    25% {
+        background: linear-gradient(to bottom, var(--light-green) 45%, var(--light-grey) 45%);
+    }
+    50% {
+        background: linear-gradient(to bottom, var(--light-green) 40%, var(--light-grey) 40%);
+    }
+    75% {
+        background: linear-gradient(to bottom, var(--light-green) 35%, var(--light-grey) 35%);
+    }
+    100% {
+        background: linear-gradient(to bottom, var(--light-green) 25%, var(--light-grey) 25%);
+    }
+}
+
 
 .left_slide::before {
     top: 25%; /* позиционируем первую точку на четверть высоты */
@@ -47,11 +97,49 @@ body::after {
 }
 
 h1{
-    color: white ;
-    font-family: text_font1;
+    color: var(--white);
+    font-family: text_font1, sans-serif;
+    font-size: 4vmax;
 }
 
 h2{
-    color: #61892F;
-    font-size: 22px;
+    color: var(--light-green);
+    font-family: LXGW, sans-serif;
+    font-size: 1.8vmax;
+}
+
+label{
+    color: var(--light-green);
+}
+
+#login-form{
+    font-size: 1.2vmax;
+}
+
+#login-form .nav-link{
+    background-color: var(--dark-grey);
+    color: var(--white-grey);
+}
+
+#login-form .nav-link:hover{
+    background-color: var(--light-grey);
+}
+
+
+#login-form .nav-link.active{
+    color: var(--white);
+}
+
+/*#login-form .nav-item {*/
+/*    border: none;*/
+/*    background: transparent;*/
+/*    opacity: 1;*/
+/*    border-bottom: 2px solid #eec111;*/
+/*    color: #fff;*/
+/*}*/
+
+#login-form .strip {
+    background-color: var(--dark-green);
+    height: 2px;
+    width: 100%;
 }
