--- a/src/main/resources/ru/app/public/css/MainPage.css
+++ b/src/main/resources/ru/app/public/css/MainPage.css
@@ -1,4 +1,9 @@
 
+html{
+    scrollbar-width: none;
+}
+
+
 body{
     margin: 0;
     padding: 0;
@@ -42,11 +47,13 @@ body::before {
 
 
 .left_slide{
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 4%;
     height: 100vh;
     width: 2px;
 
-    background: linear-gradient(to bottom, var(--light-green) 50%, var(--light-grey) 50%);
+    background-image: linear-gradient(to bottom, var(--light-green) 50%, var(--light-grey) 50%);
 }
 
 .left_slide::before, .left_slide::after {
@@ -61,32 +68,6 @@ body::before {
     z-index: 1;
 }
 
-.changed-gradient {
-    animation: changeGradientAnimation 1s forwards;
-}
-
-.changed-gradient-back {
-    animation: changeGradientAnimation 1s backwards;
-
-}
-
-@keyframes changeGradientAnimation {
-    0% {
-        background: linear-gradient(to bottom, var(--light-green) 50%, var(--light-grey) 50%);
-    }
-    25% {
-        background: linear-gradient(to bottom, var(--light-green) 45%, var(--light-grey) 45%);
-    }
-    50% {
-        background: linear-gradient(to bottom, var(--light-green) 40%, var(--light-grey) 40%);
-    }
-    75% {
-        background: linear-gradient(to bottom, var(--light-green) 35%, var(--light-grey) 35%);
-    }
-    100% {
-        background: linear-gradient(to bottom, var(--light-green) 25%, var(--light-grey) 25%);
-    }
-}
 
 
 .left_slide::before {
@@ -136,23 +117,43 @@ label{
     background-color: var(--white);
 }
 
-#login-reg-form input.form-control:focus{
-    border-color: var(--light-green);
-    box-shadow: 0 1px 1px var(--light-green) inset, 0 0 4px var(--dark-green);
+#login-reg-form input.form-control:focus, .form-check-input:focus{
     outline: 0 none;
+    border-color: var(--dark-green);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
 }
-
 
 #login-reg-form .form-check-input{
     background-color: var(--white);
     border-color: var(--dark-grey);
-    box-shadow: 0 1px 1px var(--light-green) inset, 0 0 4px var(--dark-green);
-    outline: 0 none;
+    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba(0,0,0,0.25)'/></svg>");
 }
 
+
+#login-reg-form .form-check-input:checked{
+    background-color: var(--light-green);
+    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgb(255,255,255)'/></svg>");
+
+}
 
 #login-reg-form .strip {
     background-color: var(--dark-green);
     height: 2px;
     width: 100%;
+}
+
+#login-reg-form button {
+    background-color: var(--dark-green);
+    border-color: var(--dark-grey);
+    font-size: 1.2vmax;
+}
+
+#login-reg-form button:hover {
+    background-color: var(--light-green);
+    border-color: var(--dark-grey);
+}
+
+#login-reg-form button:active {
+    outline: 0 none;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
 }
