Некоторые изменения в MainPage: - Добавлено подсказка по логину. - Изменены отступы.

--- a/src/main/resources/ru/app/public/css/MainPage.css
+++ b/src/main/resources/ru/app/public/css/MainPage.css
@@ -95,6 +95,12 @@ label{
     font-size: 1.2vmax;
 }
 
+p{
+    color: var(--light-grey);
+    font-size: 1vmax;
+}
+
+
 #login-reg-form{
     font-size: 1.2vmax;
 }
