--- a/src/main/resources/ru/app/public/css/MainPage.css
+++ b/src/main/resources/ru/app/public/css/MainPage.css
@@ -78,29 +78,6 @@ body::before {
     top: 50%; /* позиционируем вторую точку на три четверти высоты */
 }
 
-h1{
-    color: var(--white);
-    font-family: text_font1, sans-serif;
-    font-size: 4vmax;
-}
-
-h2{
-    color: var(--light-green);
-    font-family: LXGW, sans-serif;
-    font-size: 1.8vmax;
-}
-
-label{
-    color: var(--light-green);
-    font-size: 1.2vmax;
-}
-
-p{
-    color: var(--light-grey);
-    font-size: 1vmax;
-}
-
-
 #login-reg-form{
     font-size: 1.2vmax;
 }
@@ -108,6 +85,7 @@ p{
 #login-reg-form .nav-link{
     background-color: var(--dark-grey);
     color: var(--white-grey);
+    font-size: 1.2vmax;
 }
 
 #login-reg-form .nav-link:hover{
@@ -162,4 +140,13 @@ p{
 #login-reg-form button:active {
     outline: 0 none;
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+}
+
+
+@media screen and (max-width: 991px) {
+
+    #login-reg-form, #login-reg-form .nav-link{
+        font-size: 1.6vmax;
+    }
+
 }
