--- a/src/main/resources/ru/app/public/css/Main.css
+++ b/src/main/resources/ru/app/public/css/Main.css
@@ -29,33 +29,69 @@ body::after, body::before{
     pointer-events: none;
 
 }
-.main_header {
-    height: 100vh;
-    width: 100%; /* Добавлено */
+.header{
+height:100%;
 }
 
-.navigation {
-    width: 100%;
-
-}
-.nav_panel{
-    width:100%;
-    margin-top:4%;
-    padding:3%;
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
+.content{
+    margin-top:1rem;
+height:100vh;
     }
-.main_content{
-     border:2px solid white;
-        text-align:center;
-    }
-.main_msg{
+.navbar{
     border:2px solid green;
-    text-align:center;
-
+    height:4rem;
     }
-.p1, .p2{
-    text-align:center;
 
+
+
+
+.section{
+   margin-top:2.5rem;
+
+height:100%;
    }
+
+.look{
+    width:100%;
+    height:1.5rem;
+     border:2px solid green;
+
+}
+.members{
+ width:100%;
+ border:2px solid green;
+ margin-top:1.5rem;
+
+
+/* С этим дичь какая-то блять  */
+height:92vh;
+/* С этим дичь какая-то блять  */
+}
+.img{
+      width:100%;
+        height:60%;
+         border:2px solid green;
+}
+
+.middle_path{
+padding-left:1.5rem;
+padding-right:1.5rem;
+}
+.some_text{
+       width:100%;
+      height:35%;
+        border:2px solid green;
+       margin-top:2rem;
+}
+.reg_input{
+    width:100%;
+          height:45%;
+            border:2px solid green;
+
+}
+.statistic{
+     width:100%;
+     height:50%;
+    border:2px solid green;
+       margin-top:2rem;
+}
