--- a/src/main/resources/ru/app/public/css/Main.css
+++ b/src/main/resources/ru/app/public/css/Main.css
@@ -1,60 +1,43 @@
-* {
-    scrollbar-width: none;
+/* general */
+
+:root {
+    --dark-green:#61892F;
+    --light-green:#86C232;
+    --dark-grey:#222629;
+    --medium-grey:#474B4F;
+    --light-grey:#6B6E70;
+    --white-grey: #e5e5e5;
+    --white: #FFFFFF;
 }
 
-
-.navbar {
-    border: 2px solid green;
+body{
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    background-color: var(--white-grey);
 }
 
-
-
-.look {
-    width: 100%;
-    height: 1.5rem;
-    border: 2px solid green;
-
+.h-40{
+    height: 40%;
 }
 
-.members {
-    width: 100%;
-    border: 2px solid green;
-    margin-top: 1.5rem;
-
-
-    /* С этим дичь какая-то блять  */
-    height: 92vh;
-    /* С этим дичь какая-то блять  */
-}
-
-.img {
-    width: 100%;
+.h-60{
     height: 60%;
-    border: 2px solid green;
 }
 
-.middle_path {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+p{
+    color: var(--dark-grey);
+    font-size: 1vmax;
 }
 
-.some_text {
-    width: 100%;
-    height: 35%;
-    border: 2px solid green;
-    margin-top: 2rem;
+
+
+.bgr{
+    background-color: var(--white);
+    border-radius: 15px;
 }
 
-.reg_input {
-    width: 100%;
-    height: 45%;
-    border: 2px solid green;
-
+.h_80{
+    height: 80vh;
 }
 
-.statistic {
-    width: 100%;
-    height: 50%;
-    border: 2px solid green;
-    margin-top: 2rem;
-}
