--- a/src/main/resources/ru/app/public/css/Main.css
+++ b/src/main/resources/ru/app/public/css/Main.css
@@ -21,12 +21,12 @@ body{
     background-color: var(--white-grey);
 }
 
-.h-40{
-    height: 40%;
+.h-35{
+    height: 35%;
 }
 
-.h-60{
-    height: 60%;
+.h-65{
+    height: 65%;
 }
 
 p{
@@ -34,12 +34,12 @@ p{
     font-size: 1vmax;
 }
 
-.white-img{
+.white_img{
     fill: var(--white)
 }
 
 
-.navbar-nav-center {
+.navbar_nav_center {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
@@ -71,12 +71,73 @@ svg:hover{
     fill: var(--light-green);
 }
 
-.bgr{
+.background_rounded{
     background-color: var(--white);
     border-radius: 15px;
 }
 
-.h_80{
-    height: 80vh;
+.img_container {
+    overflow: hidden;
+    position: relative;
 }
 
+.img_container img {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.last_activity_div{
+    background-color: #f5f5f5;
+}
+
+
+/* vlad */
+
+.bt-s{
+    padding-top: 1.7rem;
+}
+
+.text p{
+    font-size: 0.9rem;
+    font-weight:bolder;
+    display:inline;
+}
+
+.text{
+    padding-left: 0.14rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    border-bottom: 2px solid var(--dark-grey);
+}
+
+.contents p{
+    display:inline;
+    padding-left:0.6rem;
+    margin-bottom:0.1em;
+}
+
+.contents{
+    display:flex;
+    align-items:start;
+    padding-bottom: 0.4rem;
+
+}
+
+
+.r_text{
+    padding-left: 0.6em;
+}
+
+
+.l-a{
+    font-size:0.94em;
+    font-weight:bolder;
+}
+
+.content_rl{
+    display:flex;
+    align-items:center;
+
+}
