--- a/src/main/resources/ru/app/public/css/Main.css
+++ b/src/main/resources/ru/app/public/css/Main.css
@@ -1,81 +1,4 @@
 
-@font-face { font-family: "text_font1"; src: url("../fonts/text_font1.ttf"); }
-@font-face { font-family: "LXGW"; src: url("../fonts/LXGW.ttf"); }
-@font-face { font-family: "Underdog"; src: url("../fonts/Underdog.ttf"); }
-
-
-:root {
-    --dark-green: #709d37;
-    --light-green:#86C232;
-    --dark-grey:#222629;
-    --medium-grey:#474B4F;
-    --light-grey:#6B6E70;
-    --white-grey: #e5e5e5;
-    --white: #FFFFFF;
-}
-
-body{
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    background-color: var(--white-grey);
-}
-
-.h-35{
-    height: 35%;
-}
-
-.h-65{
-    height: 65%;
-}
-
-p{
-    color: var(--dark-grey);
-    font-size: 1vmax;
-}
-
-.white_img{
-    fill: var(--white)
-}
-
-
-.navbar_nav_center {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-}
-
-nav a{
-    font-family: Underdog, sans-serif;
-    font-weight: lighter;
-}
-
-.navbar-nav .nav-link{
-    color: var(--dark-green)
-}
-
-.navbar-nav .nav-link:hover{
-    color: var(--light-green)
-}
-
-.navbar-nav .nav-link.active{
-    color: var(--light-green)
-}
-
-svg{
-    fill: var(--dark-green);
-}
-
-svg:hover{
-    fill: var(--light-green);
-}
-
-.background_rounded{
-    background-color: var(--white);
-    border-radius: 15px;
-}
-
 .img_container {
     overflow: hidden;
     position: relative;
@@ -88,56 +11,8 @@ svg:hover{
     object-fit: cover;
 }
 
-.last_activity_div{
+.site_info_div{
     background-color: #f5f5f5;
 }
 
 
-/* vlad */
-
-.bt-s{
-    padding-top: 1.7rem;
-}
-
-.text p{
-    font-size: 0.9rem;
-    font-weight:bolder;
-    display:inline;
-}
-
-.text{
-    padding-left: 0.14rem;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    border-bottom: 2px solid var(--dark-grey);
-}
-
-.contents p{
-    display:inline;
-    padding-left:0.6rem;
-    margin-bottom:0.1em;
-}
-
-.contents{
-    display:flex;
-    align-items:start;
-    padding-bottom: 0.4rem;
-
-}
-
-
-.r_text{
-    padding-left: 0.6em;
-}
-
-
-.l-a{
-    font-size:0.94em;
-    font-weight:bolder;
-}
-
-.content_rl{
-    display:flex;
-    align-items:center;
-
-}
