--- a/src/main/resources/ru/app/public/css/general.css
+++ b/src/main/resources/ru/app/public/css/general.css
@@ -102,7 +102,7 @@ svg:hover{
         visibility: hidden;
     }
     .additional_navbar{
-        display: flex !important;;
+        display: flex !important;
         visibility: visible;
     }
 }
