--- a/src/main/resources/ru/app/public/css/Main.css
+++ b/src/main/resources/ru/app/public/css/Main.css
@@ -15,6 +15,28 @@
     background-color: #f5f5f5;
 }
 
+.text_container{
+    min-height: 35%;
+}
+
 .main_content{
-    flex-grow : 1;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: auto;
+    flex-wrap: wrap;
+}
+
+main{
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+}
+
+@media only screen and (max-width: 991px) {
+    #div1 {
+        order: 2; /* Ставим div с id="1" ниже */
+    }
+    #div2 {
+        order: 1; /* Ставим div с id="2" выше */
+    }
 }
