--- a/src/main/resources/ru/app/public/css/general.css
+++ b/src/main/resources/ru/app/public/css/general.css
@@ -13,10 +13,13 @@
     --white: #FFFFFF;
 }
 
+html, body{
+    height: 100%;
+}
+
 body{
     margin: 0;
     padding: 0;
-    height: 100vh;
     background-color: var(--white-grey);
 }
 
