крч завтра я буду ебаться с тем чтобы при маленьком разрешении экрана не налазила статистика на div  стекстом

--- a/src/main/resources/ru/app/public/css/Main.css
+++ b/src/main/resources/ru/app/public/css/Main.css
@@ -31,6 +31,16 @@ main{
     flex-flow: column;
     height: 100%;
 }
+.button button{
+    border:none;
+    background-color:var(--dark-green);
+    border-radius:5%;
+
+}
+.button{
+    padding-top:0.4rem;
+
+}
 
 @media only screen and (max-width: 991px) {
     #div1 {
