крч завтра я буду ебаться с тем чтобы при маленьком разрешении экрана не налазила статистика на div  стекстом

--- a/src/main/resources/ru/app/public/css/Main.css
+++ b/src/main/resources/ru/app/public/css/Main.css
@@ -42,11 +42,27 @@ main{
 
 }
 
-@media only screen and (max-width: 991px) {
-    #div1 {
-        order: 2; /* Ставим div с id="1" ниже */
-    }
-    #div2 {
-        order: 1; /* Ставим div с id="2" выше */
-    }
-}
+/* @media only screen and (max-width: 991px) { */
+/*     #div1 { */
+/*         order: 2;  *//* Ставим div с id="1" ниже */
+/*     } */
+/*     #div2 { */
+/*         order: 1;  *//* Ставим div с id="2" выше */
+/*     } */
+/* } */
+
+ @media (max-width: 991px) {
+            #div1 {
+                margin-bottom: 1rem;
+            }
+            .main_content {
+                display: flex;
+                flex-direction: column;
+            }
+        }
+/*  вот эата хуйня работает, но статистика будет вверху*/
+
+
+
+
+
