попытки починить scroll

--- a/src/main/resources/ru/app/public/css/Main.css
+++ b/src/main/resources/ru/app/public/css/Main.css
@@ -16,7 +16,7 @@
 }
 
 .text_container{
-    min-height: 35%;
+    /*min-height: 35%;*/
 }
 
 .statistic_item{
@@ -50,28 +50,10 @@
     padding-right: 1rem;
 }
 
-.main_content{
-    flex-grow: 1;
-    flex-shrink: 1;
-    flex-basis: auto;
-    flex-wrap: wrap;
-}
-
-main{
-    display: flex;
-    flex-flow: column;
-    height: 100%;
-}
 
 .scrollable-content {
     overflow-y: auto;
-    height: 100%;
-}
-
-.scrollable-wrapper{
-    position: relative;
-    overflow: hidden;
-    height: 100%;
+    height: 60vh;
 }
 
 
