рч я сделал, возможно там доделывать не надо. Объясню почему. А там решим

--- a/src/main/resources/ru/app/public/css/general.css
+++ b/src/main/resources/ru/app/public/css/general.css
@@ -15,16 +15,21 @@
 
 *{
     box-sizing: border-box;
+
 }
 
 body {
     margin: 0;
     padding: 0;
-    height: 100vh;
+    height: 100%;
+    border:3px solid yellow;
+
 }
 
 main{
     background-color: var(--white-grey);
+/*     height:100%; */
+    border:2px solid #000;
 }
 
 
