--- a/src/main/resources/ru/app/public/css/Main.css
+++ b/src/main/resources/ru/app/public/css/Main.css
@@ -51,12 +51,15 @@
 }
 
 
-.scrollable-content {
+.col {
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: auto;
+}
+
+.scrollable {
+    flex-grow: 1;
     overflow-y: auto;
-    height: 100dvh;
-
-
-    border:2px solid #000;
 }
 
 
