--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -31,16 +31,19 @@ nav a{
 .navbar_user_icon{
     fill: var(--dark-green);
 }
-.navbar_user_icon:hover{
+.navbar_user_icon{
     fill: var(--light-green);
 }
 
-
-.navbar_link{
+.navbar-nav .nav-link{
     color: var(--dark-green);
     text-decoration: none;
 }
-.navbar_link:hover{
+.navbar-nav .nav-link.active{
+    color: var(--light-green);
+    text-decoration: none;
+}
+.navbar-nav .nav-link:hover{
     color: var(--light-green)
 }
 
@@ -52,6 +55,7 @@ nav a{
     }
     .additional_navbar{
         display: flex !important;
+        flex-direction: row;
         visibility: visible;
     }
 }
