--- a/frontend/src/assets/css/BootstrapMod.scss
+++ b/frontend/src/assets/css/BootstrapMod.scss
@@ -1,6 +1,5 @@
 @import "~bootstrap/scss/bootstrap";
 
-/* ------- customize primary buttons -------- */
 $dark-green: #709d37;
 $light-green:#86C232;
 $dark-grey:#222629;
@@ -18,6 +17,28 @@ $white: #FFFFFF;
   @include button-outline-variant($dark-green, $dark-grey, $light-green, $light-green, $dark-grey);
 }
 
-//TODO("Добавить чекбокс")
+.form-check-input{
 
-//TODO("Добавить подсказку required")
+  background-color: $white;
+
+
+  &:focus {
+    box-shadow: 0 0 0 0;
+    border-color: $white;
+  }
+
+  &:hover{
+    box-shadow: 0 0 0 0;
+    border-color: $light-green;
+  }
+
+  // Стили для состояния, когда элемент отмечен
+  &:checked {
+    box-shadow: 0 0 0 0;
+    background-color: $dark-green;
+    border-color: $dark-green;
+  }
+
+}
+
+//TODO("Поля ввода")
