--- a/frontend/src/components/App/App.css
+++ b/frontend/src/components/App/App.css
@@ -32,7 +32,7 @@ main {
     background-color: var(--white-grey);
 }
 
-p, h1, h2, h3, h4, h5, h6, label{
+a, p, h1, h2, h3, h4, h5, h6, label{
     color: var(--dark-grey);
 }
 
