--- a/frontend/src/components/Pages/MainPage/Statistics/Statistics.css
+++ b/frontend/src/components/Pages/MainPage/Statistics/Statistics.css
@@ -28,3 +28,10 @@
 .statistic_item p:not(.counter){
     padding-right: 1rem;
 }
+
+@media only screen and (max-width: 575px) {
+    #statisticDiv {
+        margin-bottom: 1rem;
+    }
+
+}
