--- a/frontend/src/assets/css/Scrollbar.css
+++ b/frontend/src/assets/css/Scrollbar.css
@@ -1,15 +1,24 @@
 ::-webkit-scrollbar{
-    width: .5rem;
+    width: .4rem;
+}
+
+@media only screen and (max-width: 575px) {
+    ::-webkit-scrollbar{
+        width: .3rem;
+    }
 }
 
 ::-webkit-scrollbar-track{
     background-color: var(--white);
-    border: 1px solid var(--light-grey);
     border-radius: 15px;
 }
 
 ::-webkit-scrollbar-thumb{
-    background-color: var(--light-green);
-    border: 1px solid var(--light-grey);
+    background-color: var(--light-grey);
     border-radius: 15px;
+    opacity: .7;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    opacity: .15;
 }
