--- a/frontend/src/components/Pages/NotFoundPage/NotFoundPage.module.css
+++ b/frontend/src/components/Pages/NotFoundPage/NotFoundPage.module.css
@@ -4,16 +4,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
 
+.wrapper{
+    height: 100%;
+    background-color: var(--white-grey);
 }
 
 .img_container img {
     width: 50%;
     height: auto; /* Сначала задаем ширину 50% и сохраняем соотношение сторон */
-}
-
-body{
-    background-color: var(--white-grey);
 }
 
 @media (max-aspect-ratio: 1/1) { /* Условие, когда ширина больше высоты */
