--- a/frontend/src/components/App/App.css
+++ b/frontend/src/components/App/App.css
@@ -18,27 +18,29 @@
     font-size: clamp(1rem, 1vw, 2rem);
 }
 
-html, body, #root{
+html, body, #root, main{
     height: 100%;
 }
 
 body {
     margin: 0;
-    overflow: hidden;
+    overflow: auto;
+}
+
+header{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 9999;
 }
 
 
 #root {
-    display: flex;
-    flex-direction: column;
+
 }
 
-
 main {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
+
     background-color: var(--white-grey);
 }
 
