--- a/frontend/src/components/App/App.css
+++ b/frontend/src/components/App/App.css
@@ -18,29 +18,28 @@
     font-size: clamp(1rem, 1vw, 2rem);
 }
 
-html, body, #root, main{
+html, body{
     height: 100%;
 }
 
 body {
     margin: 0;
-    overflow: auto;
+    overflow-x: auto;
+    overflow-y: auto;
+}
+
+#root{
+    margin: 0;
 }
 
 header{
-    position: fixed;
+    position: sticky;
     top: 0;
     width: 100%;
     z-index: 9999;
 }
 
-
-#root {
-
-}
-
 main {
-
     background-color: var(--white-grey);
 }
 
