--- a/frontend/src/components/App/App.css
+++ b/frontend/src/components/App/App.css
@@ -18,22 +18,22 @@
     font-size: clamp(1rem, 1vw, 2rem);
 }
 
-html, body{
+html, body, #root{
     height: 100%;
 }
 
 body {
-    margin: 0;
     overflow-x: auto;
     overflow-y: auto;
 }
 
 #root{
-    margin: 0;
+    display: flex;
+    flex-direction: column;;
 }
 
 header{
-    position: sticky;
+    position: fixed;
     top: 0;
     width: 100%;
     z-index: 9999;
@@ -41,6 +41,9 @@ header{
 
 main {
     background-color: var(--white-grey);
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
 }
 
 a, p, h1, h2, h3, h4, h5, h6, label {
