--- a/frontend/src/components/App/App.css
+++ b/frontend/src/components/App/App.css
@@ -18,8 +18,14 @@
     font-size: clamp(1rem, 1vw, 2rem);
 }
 
-html, body, #root{
+html, body{
     height: 100%;
+}
+
+#root{
+    min-height: 100%;
+    display: flex;
+
 }
 
 body {
@@ -27,10 +33,6 @@ body {
     overflow-y: auto;
 }
 
-#root{
-    display: flex;
-    flex-direction: column;;
-}
 
 header{
     position: fixed;
@@ -40,7 +42,6 @@ header{
 }
 
 main {
-    background-color: var(--white-grey);
     display: flex;
     flex-direction: column;
     flex-grow: 1;
