--- a/frontend/src/components/Pages/MainPage/Content/Content.module.css
+++ b/frontend/src/components/Pages/MainPage/Content/Content.module.css
@@ -1,12 +1,9 @@
 .img_container {
+    height: 500px;
     overflow: hidden;
-    position: relative;
 }
 
 .img_container img {
-    position: absolute;
-    height: 100%;
-    width: 100%;
     object-fit: cover;
 }
 
