--- a/frontend/src/components/Pages/MainPage/Content/Content.module.css
+++ b/frontend/src/components/Pages/MainPage/Content/Content.module.css
@@ -1,9 +1,11 @@
 .img_container {
-    height: 500px;
+    height:50vh;
     overflow: hidden;
 }
 
 .img_container img {
+    height: 100%;
+    width: 100%;
     object-fit: cover;
 }
 
