--- a/frontend/src/components/Pages/MainPage/Main/Main.css
+++ b/frontend/src/components/Pages/MainPage/Main/Main.css
@@ -8,14 +8,8 @@
     position: absolute;
     top: 0;
     bottom: 0;
+    max-width: 25vw;
 }
-
-
-/*.col {*/
-/*    flex-grow: 1;*/
-/*    flex-shrink: 1;*/
-/*    flex-basis: auto;*/
-/*}*/
 
 .main-inner{
     background-color: var(--white-grey);
