--- a/frontend/src/components/App/App.css
+++ b/frontend/src/components/App/App.css
@@ -25,7 +25,8 @@ html, body{
 #root{
     min-height: 100%;
     display: flex;
-
+    background-color: var(--white-grey);
+    z-index: -1;
 }
 
 body {
