--- a/frontend/src/components/Pages/MainPage/Content/Content.module.css
+++ b/frontend/src/components/Pages/MainPage/Content/Content.module.css
@@ -12,3 +12,9 @@
 .site_info_div{
     background-color: #f5f5f5;
 }
+
+@media only screen and (max-width: 991px) {
+    .img_container{
+        height: 40vh;
+    }
+}
